--- a/css/styles.css
+++ b/css/styles.css
@@ -127,15 +127,13 @@ address {
 
 .hero {
     background: #2e2f42;
-
+    padding: 188px 0;
 }
 
 .hero-container {
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 188px;
-    padding-bottom: 188px;
 }
 
 .button-hero {
@@ -151,6 +149,7 @@ address {
     border: none;
     border-radius: 4px;
     display: block;
+    min-width: 169px;
 }
 
 .button-hero:hover {
@@ -172,6 +171,10 @@ address {
     margin-right: auto;
     margin-bottom: 48px;
     max-width: 496px;
+}
+
+.container-b {
+    padding: 120px 0;
 }
 
 .visually-hidden {
@@ -204,8 +207,6 @@ address {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-    margin-top: 120px;
-
 }
 
 .text-p {
@@ -214,7 +215,10 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    margin-bottom: 120px;
+}
+
+.container-b {
+    padding: 120px 0;
 }
 
 .title-two-b {
@@ -225,7 +229,6 @@ address {
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
-    padding-top: 120px;
     margin-bottom: 72px;
 }
 
@@ -234,11 +237,15 @@ address {
     gap: 24px;
 }
 
+.portfolio-person {
+    padding: 32px 0
+}
+
 .page-portfolio {
     max-width: 264px;
     height: 380px;
-    width: calc((100% - 24px) / 4);
-    margin-bottom: 120px;
+    width: calc((100% - 3 * 24px) / 4);
+    border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
@@ -248,8 +255,8 @@ address {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-top: 32px;
     text-align: center;
+    margin-bottom: 8px
 }
 
 .text-p-b {
@@ -258,23 +265,25 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    padding-top: 8px;
-    padding-bottom: 32px;
     text-align: center;
+}
+
+.container-c {
+    padding: 120px 0
 }
 
 .ul-c {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    margin-bottom: 132px;
+    row-gap: 48px;
 }
 
 .li-c {
     max-width: 360px;
     height: 420px;
     width: calc((100% - 3 * 24px));
-    border: 1px solid #e7e9fc;
+
 }
 
 .title-two-c {
@@ -285,8 +294,13 @@ address {
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
-    margin-top: 108px;
     margin-bottom: 72px;
+}
+
+.container-addition {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .title-three-c {
@@ -295,8 +309,7 @@ address {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-top: 32px;
-    padding-left: 16px;
+    margin-bottom: 8px
 }
 
 .text-p-c {
@@ -305,9 +318,6 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    padding-top: 8px;
-    padding-left: 16px;
-    padding-bottom: 32px;
 }
 
 
@@ -332,6 +342,10 @@ address {
     background: #2e2f42;
 }
 
+.container-footer {
+    padding: 100px 0;
+}
+
 .logo-two {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -340,6 +354,8 @@ address {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #f4f4fd;
+    display: inline-block;
+    margin-bottom: 16px
 }
 
 .footer-logo {
@@ -350,9 +366,11 @@ address {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    padding-top: 100px;
+    display: inline-block;
+    margin-bottom: 16px
 }
 
 .end {
     color: #f4f4fd;
+    max-width: 264px;
 }
